Fix image size for image card and officer photo so that if a link is broken, it does not break the layout of the site

--- a/app/scripts/directives/nobeImageCard/nobeImageCard.css
+++ b/app/scripts/directives/nobeImageCard/nobeImageCard.css
@@ -11,8 +11,8 @@
   border: 5px solid #f2f2f2;
   display: block;
   margin: 0 auto;
-  max-height: 179px;
-  max-width: 300px;
+  height: 179px;
+  width: 300px;
   padding: 50px 10px;
   -webkit-transition: all 0.5s ease 0s;
   -moz-transition: all 0.5s ease 0s;
